Opened 7 years ago

Closed 7 years ago

#8162 closed defect (fixed)

left shift of negative value bug in libavcodec/mpeg12dec.c

Reported by: Suhwan Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: ubsan
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Summary of the bug:
There is a left shift of negative value bug in libavcodec/mpeg12dec.c

libavcodec/mpeg12dec.c:2017:14: runtime error: left shift of negative value -622428417
SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior libavcodec/mpeg12dec.c:2017:14 in 

How to reproduce:

% ./ffmpeg_g -y -i pedestrians-bug001-minimal.gxf -loglevel 99 -map 0 -aframes 68 -ab 738k -ac 12 -strict 3 output/tmp.roq

ffmpeg version N-94943-g1db6e47e85
built on ubuntu 18.04 with clang-6 and UBSAN option.

Attachments (2)

gdb-mpeg12dec (20.4 KB ) - added by Suhwan 7 years ago.
pedestrians-bug001-minimal.gxf (498.4 KB ) - added by Suhwan 7 years ago.
poc

Download all attachments as: .zip

Change History (3)

by Suhwan, 7 years ago

Attachment: gdb-mpeg12dec added

by Suhwan, 7 years ago

poc

comment:1 by mkver, 7 years ago

Component: undeterminedavcodec
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.